--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.5
 Package: electrosense-decoders
 Architecture: any
 Pre-Depends: dpkg (>= 1.16.1), ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, python-numpy, python-scipy
+Depends: ${shlibs:Depends}, ${misc:Depends}, python3-numpy, python3-scipy
 Description: Decoders package for the sensor
  This package include all the binaries and dependences for the decoders that
  will be called from es_sensor.
